# UniversityTycoon

./: .gitignore  CLAUDE.md  asset_prompt_pack.md  icon_prompt_shortlist.md  kakao_chatbot_game_design.md  kakao_openbuilder_block_flow.md  kakao_skill_server_api_spec.md  ui_style_guide.md  university_sim_6week_roadmap.md  university_sim_game_design.md  university_sim_mvp_plan.md
.superpowers/brainstorm/47939-1774087744/: .server-info  kakao-basiccard-mockup.html  kakao-card-options.html
chatbot-server/: Dockerfile  README.md  pyproject.toml  render.yaml
chatbot-server/alembic/: env.py
chatbot-server/alembic/versions/: a37ba5e06f56_initial_tables.py
chatbot-server/app/: __init__.py  config.py  main.py
chatbot-server/app/api/: deps.py
chatbot-server/app/api/routes/: health.py  kakao.py
chatbot-server/app/models/: db_models.py  schemas.py
chatbot-server/app/repositories/: base.py  in_memory.py  postgres.py
chatbot-server/app/services/: callback.py  events.py  game_engine.py  image_service.py  kakao_adapter.py  quests.py  titles.py
chatbot-server/tests/: conftest.py  test_admission.py  test_api.py  test_events.py  test_game_engine.py  test_graduation.py  test_image_service.py  test_kakao_adapter.py  test_quests.py  test_titles.py
chatbot-server/university_tycoon_chatbot_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: kakao-openbuilder-setup.md
docs/superpowers/plans/: 2026-03-21-ai-image-generation.md  2026-03-21-kakao-chatbot-mvp.md  2026-03-21-random-events.md  (+1 more)
mobile-app/: App.tsx  README.md  app.json  package-lock.json  package.json
(+14 files in other folders)
