[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "university-tycoon-chatbot-server"
version = "0.1.0"
description = "FastAPI skill server skeleton for University Tycoon Kakao chatbot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
