[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "university-tycoon-chatbot-server"
version = "0.1.0"
description = "FastAPI skill server skeleton for University Tycoon Kakao chatbot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "psycopg2-binary>=2.9,<3.0",
  "alembic>=1.14,<2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
